# biblioteca

./: Biblioteca  Biblioteca.drawio  CMakeLists.txt  Main.c  README.md  biblioteca.db
Main.dSYM/Contents/Resources/DWARF/: Main
PRUEBA.dSYM/Contents/Resources/DWARF/: PRUEBA
biblioteca/: Main  PRUEBA  PRUEBA.c
biblioteca/PRUEBA.dSYM/Contents/: Info.plist
